--- a/_includes/passive_overall_clusters_comp.html
+++ b/_includes/passive_overall_clusters_comp.html
@@ -1,25 +1,25 @@
-<table align = "center">
+<table align="center">
 <tbody>
-<tr>
-<td>
+<tr style="height: 233px;">
+<td style="height: 233px;">
 <table>
 <tbody>
 <tr>
-<td class="selected" style="display: table-cell; font-weight: bold; font-family:Arial, sans-serif; font-size:16px;background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; font-weight: bold; font-family: Arial, sans-serif; font-size: 16px; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Cluster</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; font-weight: bold; font-family:Arial, sans-serif; font-size:16px;background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; font-weight: bold; font-family: Arial, sans-serif; font-size: 16px; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p># verbs</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; font-weight: bold;font-family:Arial, sans-serif;font-size:16px; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; font-weight: bold; font-family: Arial, sans-serif; font-size: 16px; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>score</p>
@@ -28,21 +28,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: left; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: left; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Violence</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit;font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>28</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>1438</p>
@@ -51,21 +51,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Love</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>7</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>210</p>
@@ -74,21 +74,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit;font-family:Arial, sans-serif; font-size:16px;text-align: left; vertical-align: top;background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: left; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Power</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>17</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>930</p>
@@ -97,21 +97,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Trope woman</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>2</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family: Arial, sans-serif; font-size: 16px; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>149</p>
@@ -122,26 +122,26 @@
 </tbody>
 </table>
 </td>
-<td>&nbsp;</td>
-<td>
+<td style="height: 233px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+<td style="height: 233px;">
 <table>
 <tbody>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Cluster</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p># verbs</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>score</p>
@@ -150,21 +150,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Violence</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center;font-family:Arial, sans-serif; font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>26</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>1229</p>
@@ -173,21 +173,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;background-color: #ffccc9;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Love</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;font-size:16px;vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>8</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;font-size:16px;vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>404</p>
@@ -196,21 +196,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Power</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>16</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>783</p>
@@ -219,21 +219,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;">
+<td class="selected" style="text-align: left; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Trope woman</p>
 </div>
 </div>
 </td>
-<td class="selected" style="text-align: center; font-family:Arial, font-size:16px;sans-serif;vertical-align: top;">
+<td class="selected" style="text-align: center; font-family: Arial, font-size:16px; sans-serif;vertical-align: top;">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>2</p>
 </div>
 </div>
 </td>
-<td class="selected" style="text-align: center; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;">
+<td class="selected" style="text-align: center; font-family: Arial, sans-serif; font-size: 16px; vertical-align: top;">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>149</p>
@@ -245,10 +245,10 @@
 </table>
 </td>
 </tr>
-<tr>
-<td align="center"; style = "font-family:Arial, sans-serif;font-size:15px;"> <em>Passive actions of male characters</em></td>
-<td>&nbsp;</td>
-<td align="center"; style ="font-family:Arial, sans-serif;font-size:15px;"> <em>Passive actions of female characters </em></td>
+<tr style="height: 32.9167px;">
+<td style="font-family: Arial, sans-serif; font-size: 15px; height: 32.9167px;" align="center"><em>Passive actions of male characters</em></td>
+<td style="height: 32.9167px;">&nbsp;</td>
+<td style="font-family: Arial, sans-serif; font-size: 15px; height: 32.9167px;" align="center"><em>Passive actions of female characters </em></td>
 </tr>
 </tbody>
 </table>
