--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -1,8 +1,8 @@
-<!-- A glimpse of our data... -->
+<!-- A glimpse into our data... -->
 <section class="page-section" id="glimpse">
 	<div class="container">
 		<center>
-		<h1> 🔎 <b>A glimpse of our data...</b> </h1>
+		<h1> 🔎 <b>A glimpse into our data...</b> </h1>
 		<h4 style="padding-left: 55px; padding-right: 55px; align="justify";> Data in numbers </h4>
 		{% include counter.html %}
 		<h4 style="padding-left: 55px; padding-right: 55px;padding-top: 30px;"; align="justify;"> <b>Women are underrepresented in movies</b> </h4>
@@ -19,4 +19,4 @@
 		</center>
 	</div>
 </section>
-<!-- End A glimpse of our data... -->
+<!-- End A glimpse into our data... -->
