--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -4,6 +4,7 @@
 		<center>
 		<h1 style= "padding-bottom: 10px"> <b> Conclusion </b></h1>
 		<div style="overflow-x: scroll; padding-left: 55px; padding-right: 55px;"> 
+		{% include box.html%}
 		{% include evolution_fraction_scroll.html%}
 		</div>
 
