--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -3,8 +3,8 @@
 	<div class="container">
 		<center>
 		<h1> 🔎 <b>A glimpse into our data...</b> </h1>
-		<p style="padding-left: 55px; padding-right: 55px"; align="justify";> To investigate the portrayal of women in movies, we used the CMU movie summary corpus which contains movies summaries from Wikipedia and their metadata extracted from Freebase. For each movie, we will focus on the list of characters and their summaries to explore this issue. </p>
-		<h4 style="padding-left: 55px; padding-right: 55px; padding-bottom: 30px;" align="justify";> <b>Data in numbers</b> </h4>
+		<p style="padding-left: 55px; padding-right: 55px;"; align="justify";> To investigate the portrayal of women in movies, we used the CMU movie summary corpus which contains movies summaries from Wikipedia and their metadata extracted from Freebase. For each movie, we will focus on the list of characters and their summaries to explore this issue. </p>
+		<h4 style="padding-left: 55px; padding-right: 55px; padding-bottom: 30px;";> <b>Data in numbers</b> </h4>
 		{% include counter.html %}
 		<h4 style="padding-left: 55px; padding-right: 55px;padding-top: 30px;"; align="justify;"> <b>Women are underrepresented in movies</b> </h4>
 		<p style="padding-left: 55px; padding-right: 55px;"; align="justify"> We've seen that the large majority of movies include a higher fraction of male compared to female characters at least in the top grossing movies released in 2021. But, has it always been the case and is the trend changing? As we can observe on the graph, this inequality has always been present. Indeed, the fraction of female characters varies between 25% and 36%. Interestingly, we can see a slight increasing trend from the 80s coinciding with the slow improvement of women rights since the late 70s.</p>
