--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -8,15 +8,15 @@
          <div class="row">
             <div class="col-sm">
 	       <p id='0101' class="fs-2">7'353</p>
-	       <p>USA movies 🎬</p>
+	       <p style="font-size:20px;">USA movies 🎬</p>
             </div>
             <div class="col-sm">
 	       <p id='0102' class="fs-2">64'167</p>
-               <p>Female characters 🦸‍♀️</p>
+               <p style="font-size:20px;">Female characters 🦸‍♀️</p>
          </div>
          <div class="col-sm">
 	    <p class="fs-2"><span id='0103'>133'660</p>
-	    <p class="align-content-center">Male characters 🕵️</p>
+	    <p style="font-size:20px;"; class="align-content-center">Male characters 🕵️</p>
          </div>
       </div>
    </div>
