--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -7,15 +7,15 @@
       <div style="background-color : #F8DE7E;"; class="container">
          <div class="row">
             <div class="col-sm">
-	       <p id='0101' class="fs-2">7'353</p>
+	       <p id='0101' class="fs-2">7 353</p>
 	       <p style="font-size:20px;">USA movies 🎬</p>
             </div>
             <div class="col-sm">
-	       <p id='0102' class="fs-2">64'167</p>
+	       <p id='0102' class="fs-2">64 167</p>
                <p style="font-size:20px;">Female characters 🦸‍♀️</p>
          </div>
          <div class="col-sm">
-	    <p class="fs-2"><span id='0103'>133'660</p>
+	    <p class="fs-2"><span id='0103'>133 660</p>
 	    <p style="font-size:20px;"; class="align-content-center">Male characters 🕵️</p>
          </div>
       </div>
