--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -13,6 +13,7 @@
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify";>
 	 	In this plot, we observe that the top 10 genres featuring female or male characters are different. We notice that some genres are shared such as drama, thriller and romantic comedy but others are completely absent for the other gender. Additionally, some of the genres are very stereotypical. For example, 4 out of 10 genres for female characters are related to romance or family whereas male characters are much more present in action and science fiction movies. </p>
 		{% include top10genres_barplot.html %}
+		<p style="padding-left: 55px; padding-right: 55px;"; align="justify";> Now that we know that the genres in which women are most featured in is different, let’s look at a few of the most common movies genres in the dataset and see if the fractions of male and female characters has evolved differently through time.</p>
 		<div style = style="padding-left: 55px; padding-right: 55px;"; align="justify">								   
 		{% include diff_percentage.html %}
 		</div>									      
