--- a/_includes/clusters_table_good.html
+++ b/_includes/clusters_table_good.html
@@ -1,3 +1,4 @@
+<div>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -126,3 +127,4 @@
   </tr>
 </tbody>
 </table>
+</div>
