--- a/_includes/legend_table3.html
+++ b/_includes/legend_table3.html
@@ -5,11 +5,11 @@
 .tg th{border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;font-weight:normal;
   overflow:hidden;padding:4px 4px;word-break:normal;}
 .tg .tg-ycr8{background-color:#ffffff;text-align:left;vertical-align:top}
-.tg .tg-3yeq{background-color:#FFF;border-color:#000000;color:#333;text-align:left;vertical-align:top}
-.tg .tg-hrrh{background-color:#ffffff;border-color:#000000;color:#333333;text-align:left;vertical-align:top}
-.tg .tg-1d7j{background-color:#fe0000;border-color:#000000;color:#663234;font-size:11px;font-style:italic;font-weight:bold;
+.tg .tg-3yeq{background-color:#FFF;border-color:#ffffff;color:#333;text-align:left;vertical-align:top}
+.tg .tg-hrrh{background-color:#ffffff;border-color:#ffffff;color:#333333;text-align:left;vertical-align:top}
+.tg .tg-1d7j{background-color:#fe0000;border-color:#ffffff;color:#663234;font-size:11px;font-style:italic;font-weight:bold;
   text-align:left;vertical-align:top}
-.tg .tg-r281{background-color:#f8a102;border-color:#000000;text-align:center;vertical-align:top}
+.tg .tg-r281{background-color:#f8a102;border-color:#ffffff;text-align:center;vertical-align:top}
 </style>
 <table class="tg" align="center" style="undefined;table-layout: fixed; width: 335px">
 <colgroup>
