--- a/_includes/story_table_better.html
+++ b/_includes/story_table_better.html
@@ -4,18 +4,18 @@
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{background-color:#b9c9fe;border-color:#aabcfe;border-style:solid;border-width:0px;color:#039;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-bbnx{background-color:#ffffff;border-color:#000000;color:#343434;font-weight:bold;text-align:center;vertical-align:middle}
-.tg .tg-veog{background-color:#FFCC67;border-color:#000000;color:#663234;font-style:italic;font-weight:bold;text-align:left;
+.tg .tg-bbnx{background-color:#ffffff;border-color:#ffffff;color:#343434;font-weight:bold;text-align:center;vertical-align:middle}
+.tg .tg-veog{background-color:#FFCC67;border-color:#ffffff;color:#663234;font-style:italic;font-weight:bold;text-align:left;
   vertical-align:top}
-.tg .tg-zsny{background-color:#ffffff;border-color:#000000;color:#343434;text-align:center;vertical-align:middle}
-.tg .tg-bvxb{background-color:#ffffff;border-color:#000000;color:#ffffff;text-align:center;vertical-align:top}
-.tg .tg-n5df{background-color:#ffffff;border-color:#000000;color:#343434;font-weight:bold;text-align:center;vertical-align:top}
-.tg .tg-9ak0{background-color:#ffffff;border-color:#000000;color:#333333;font-weight:bold;text-align:center;vertical-align:top}
-.tg .tg-pf68{background-color:#ffcc67;border-color:#000000;color:#663234;font-style:italic;font-weight:bold;text-align:left;
+.tg .tg-zsny{background-color:#ffffff;border-color:#ffffff;color:#343434;text-align:center;vertical-align:middle}
+.tg .tg-bvxb{background-color:#ffffff;border-color:#ffffff;color:#ffffff;text-align:center;vertical-align:top}
+.tg .tg-n5df{background-color:#ffffff;border-color:#ffffff;color:#343434;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-9ak0{background-color:#ffffff;border-color:#ffffff;color:#333333;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-pf68{background-color:#ffcc67;border-color:#ffffff;color:#663234;font-style:italic;font-weight:bold;text-align:left;
   vertical-align:top}
-.tg .tg-ojok{background-color:#ffcc67;border-color:#000000;text-align:center;vertical-align:top}
-.tg .tg-trlr{background-color:#ffffff;border-color:#000000;color:#333333;text-align:center;vertical-align:middle}
-.tg .tg-2qwx{background-color:#ffffff;border-color:#000000;color:#333333;text-align:center;vertical-align:top}
+.tg .tg-ojok{background-color:#ffcc67;border-color:#ffffff;text-align:center;vertical-align:top}
+.tg .tg-trlr{background-color:#ffffff;border-color:#ffffff;color:#333333;text-align:center;vertical-align:middle}
+.tg .tg-2qwx{background-color:#ffffff;border-color:#ffffff;color:#333333;text-align:center;vertical-align:top}
 </style>
 <table class="tg" align ="center" style="undefined;table-layout: fixed; width: 791px">
 <colgroup>
