--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -25,7 +25,7 @@
 			<li  align="justify";> Finally, it seems that some of the genres evolved and other not. For example, the fraction in Comedy movies do not change significantly over time while the one of Drama seems to slowly decrease since the 80s.</li> 
 		</ul>
 		</p>
-			
+		<p style="padding-left: 55px; padding-right: 55px"; align="justify";> In this initial exploratory analysis, we discovered that the fractions of female characters is much smaller than male and that it did not evolve a lot through time. So we were wondering, what are the typical roles and actions that female characters portray in movies? In order to research this question, we will analyze movie summaries by using natural language processing. </p>
 		</center>
 	</div>
 </section>
