--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -18,14 +18,14 @@
 		</div>									      
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify";> 
 		<ul style="padding-left: 55px; padding-right: 55px"; align="justify";>
-			<li  align="justify";>As expected, in very stereotypical masculine movie genres such as Action/Adventure, the difference in fraction of male vs female characters is very large. Whereas, for a more stereotypically feminine movie genres, for example Romance or Musical films, the difference is smaller. Interestingly, it is still quite large, respectively about 15 and 24% . Indeed, one could expect that the fraction of women in movie genres, traditionally marketed to them, to be much higher than in more “masculine” movies. Additionally, no significant evolution is observed.</li>
+			<li> As expected, in very stereotypical masculine movie genres such as Action/Adventure, the difference in fraction of male vs female characters is very large. Whereas, for a more stereotypically feminine movie genres, for example Romance or Musical films, the difference is smaller. Interestingly, it is still quite large, respectively about 15 and 24% . Indeed, one could expect that the fraction of women in movie genres, traditionally marketed to them, to be much higher than in more “masculine” movies. Additionally, no significant evolution is observed.</li>
 			<br>
-			<li  align="justify";>Intriguingly, the difference in Horror film is relatively low compared to the other similar more violent movies genres. Nonetheless, this does not mean that women are more empowered in the Horror genre. Indeed, it is widely known that women are often the victim of atrocious violence in these movies. </li>
+			<li> Intriguingly, the difference in Horror film is relatively low compared to the other similar more violent movies genres. Nonetheless, this does not mean that women are more empowered in the Horror genre. Indeed, it is widely known that women are often the victim of atrocious violence in these movies. </li>
 			<br>
-			<li  align="justify";> Finally, it seems that some of the genres evolved and other not. For example, the fraction in Comedy movies do not change significantly over time while the one of Drama seems to slowly decrease since the 80s.</li> 
+			<li> Finally, it seems that some of the genres evolved and other not. For example, the fraction in Comedy movies do not change significantly over time while the one of Drama seems to slowly decrease since the 80s.</li> 
 		</ul>
 		</p>
-		<p style="padding-left: 55px; padding-right: 55px"; align="justify";> In this initial exploratory analysis, we discovered that the fractions of female characters is much smaller than male and that it did not evolve a lot through time. So we were wondering, what are the typical roles and actions that female characters portray in movies? In order to research this question, we will analyze movie summaries by using natural language processing. </p>
+		<p style="padding-left: 55px; padding-right: 55px; padding-top: 30px"; align="justify";> In this initial exploratory analysis, we discovered that the fractions of female characters is much smaller than male and that it did not evolve a lot through time. So we were wondering, what are the typical roles and actions that female characters portray in movies? In order to research this question, we will analyze movie summaries by using natural language processing. </p>
 		</center>
 	</div>
 </section>
