--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -3,13 +3,14 @@
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
 		<h1 style= "padding-bottom: 10px"> <b> Conclusion </b></h1>
+		<p style="padding-left:55px; padding-right:55px"; align="justify"> We have seen that male characters outnumber female characters by about 2:1. However, the percentage of women characters seems to increase slowly. But how long would it actually take for the parity to be reached if we assume that it continues to grow with the same rate as now? <br><br>
+Place your bet. How long do you think it will take? Scroll to the right on the graph below to reveal the answer!
+ </p>
 		<div style="overflow-x: scroll; padding-left: 55px; padding-right: 55px;"> 
 		{% include evolution_fraction_scroll.html%}
+		</div>
 		<p style="padding-left:55px; padding-right:55px"; align="justify"> *Sigh* That’s a long time to wait for women to finally be represented… Moreover, as we have seen, it is not just about having more women characters in movies, but also about how they are portrayed. Indeed, more female and male characters going beyond gender stereotypes are needed in movies. <br>
 The very slow evolution as well as the stereotypical portrayal of women can probably be explained in part by the fact that most people involved in the movie industry are mainly men. Indeed, only 17% of directors and writer are women. [3] If we want the movies we watch to be more representative of women in today’s society and stop reinforcing dangerous stereotypical ideas, more women must be given the opportunity to write and tell their own narratives. Gentlemen step aside and make way for the damsels in power 👊 </p>
-
-		</div>
-
 		</center>
 	</div>
 </section>
