--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -11,8 +11,8 @@ Place your bet. How long do you think it will take? Scroll to the right on the g
 		</div>
 		<p style="padding-left:55px; padding-right:55px"; align="justify"> *Sigh* That’s a long time to wait for women to finally be represented… Moreover, as we have seen, it is not just about having more women characters in movies, but also about how they are portrayed. Indeed, more female and male characters going beyond gender stereotypes are needed in movies. <br>
 The very slow evolution as well as the stereotypical portrayal of women can probably be explained in part by the fact that most people involved in the movie industry are mainly men. Indeed, only 17% of directors and writer are women. [3] If we want the movies we watch to be more representative of women in today’s society and stop reinforcing dangerous stereotypical ideas, more women must be given the opportunity to write and tell their own narratives. Gentlemen step aside and make way for the damsels in power 👊 </p>
-		<p style="padding-left: 55px; padding-right: 55px; font-size:15px;"; align="justify"> Source: [3] <a href="https://www.weforum.org/agenda/2022/03/number-of-women-in-film-industry-rises-slowly/
-"> Source: [3] Katharina Buchholz, <i> This is how female representation is rising across the film industry </i>, Word Economic Forum (2022)
+		<p style="padding-left: 55px; padding-right: 55px; font-size:13px;"; align="justify"> Source: [3] <a href="https://www.weforum.org/agenda/2022/03/number-of-women-in-film-industry-rises-slowly/
+"> Katharina Buchholz, <i> This is how female representation is rising across the film industry </i>, Word Economic Forum (2022)
  </a>
 		</center>
 	</div>
