added image clusters

--- a/_includes/data_analysis.html
+++ b/_includes/data_analysis.html
@@ -16,6 +16,8 @@ By only doing this naive analysis, one might think that our initial hypothesis i
 		{% include activeness_decade.html %}
 		<h4 style="padding-left:55px; padding-right:55px; padding-bottom: 30px"; align="justify;">  <b>What do male and female characters actually do? </b> </h4>	
 		{% include clusters_table_good.html %}
+		<p style="padding-left:55px; padding-right:55px"; align="justify";> ... </p>
+		<div> <img src="assets/img/table_NLP.jpg" alt="Table with extraction of active and passive verbs" style="width:750px;height:auto;"> </div>
 		</center>
 	</div>
 </section>
