--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<center>
 		<h1 style="padding-left: 55px; padding-right: 55px; padding-bottom: 20px;";> 🔎 <b>A glimpse into our data...</b> </h1>
-		<p style="padding-left: 55px; padding-right: 55px;"; align="justify";> To investigate the portrayal of women in movies, we used the CMU movie summary corpus which contains movie summaries from Wikipedia and their metadata extracted from Freebase. For each movie, we will focus on its list of characters and its summary to explore this issue. </p>
+		<p style="padding-left: 55px; padding-right: 55px;"; align="justify";> To investigate the portrayal of women in movies, we used the CMU movie summary corpus which contains movie summaries from Wikipedia and their metadata extracted from Freebase [2]. For each movie, we will focus on its list of characters and its summary to explore this issue. </p>
 		<h4 style="padding-left: 55px; padding-right: 55px;";> <b>Data in numbers</b> </h4>
 		{% include counter.html %}
 		<p style="padding-left: 55px; padding-right: 55px; font-size:12px"; align="justify"> Source: [2] <a href="http://www.cs.cmu.edu/~dbamman/pubs/pdf/bamman+oconnor+smith.acl13.pdf"> David Bamman and al., Learning Latent Personas of Film Characters, ACL 2013, Sofia, Bulgaria, (2013)  </a> </p>
