--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -15,7 +15,7 @@
 		{% include top10genres_barplot.html %}
 		<p style="padding-left: 55px; padding-right: 55px;"; align="justify";> Now that we know that the genres in which women are most featured in is different, let’s look at a few of the most common movies genres in the dataset and see if the fractions of male and female characters has evolved differently through time.</p>								   
 		{% include diff_percentage.html %}								       
-		<ul style="padding-left: 55px; padding-right: 55px"; text-align="justify";>
+		<ul style="padding-left: 55px; padding-right: 55px; justify-content: center;"; class= "menu";>
 			<li> As expected, in very stereotypical masculine movie genres such as Action/Adventure, the difference in fraction of male vs female characters is very large. Whereas, for a more stereotypically feminine movie genres, for example Romance or Musical films, the difference is smaller. Interestingly, it is still quite large, respectively about 15 and 24% . Indeed, one could expect that the fraction of women in movie genres, traditionally marketed to them, to be much higher than in more “masculine” movies. Additionally, no significant evolution is observed.</li>
 			<br>
 			<li> Intriguingly, the difference in Horror film is relatively low compared to the other similar more violent movies genres. Nonetheless, this does not mean that women are more empowered in the Horror genre. Indeed, it is widely known that women are often the victim of atrocious violence in these movies. </li>
